# libnotify

./: .gitignore  .travis.yml  .vim.custom  CHANGELOG.md  LICENSE  Libnotify-C-Notify.html  Libnotify-C-NotifyNotification.html  Libnotify.html  README.md  System-Libnotify-Internal.html  System-Libnotify-Server.html  System-Libnotify-Types.html  System-Libnotify.html  doc-index.html  index-frames.html  index.html  libnotify.cabal  libnotify.haddock  mini_Libnotify-C-Notify.html  mini_Libnotify-C-NotifyNotification.html  mini_Libnotify.html  mini_System-Libnotify-Internal.html  mini_System-Libnotify-Server.html  mini_System-Libnotify-Types.html  mini_System-Libnotify.html  package.nix  params.json  shell.nix  stack-8.2.yaml  stack.yaml
System/: Libnotify.hs  Libnotify.hsc
System/Libnotify/: Easy.hs  Internal.hsc  Server.hsc  Types.hs  Types.hsc  Usable.hs
example/: MPDNotify.hs  Simple.hs  endless.hs  notify-send.hs
src/: Libnotify-C-Notify.html  Libnotify-C-NotifyNotification.html  Libnotify.hs  Libnotify.html  System-Libnotify-Internal.html  System-Libnotify-Server.html  System-Libnotify-Types.html  System-Libnotify.html
src/Libnotify/C/: Notify.hsc  NotifyNotification.hsc
src/System/: Libnotify.hs
src/System/Libnotify/: Internal.hsc  Types.hs
src/System/Libnotify/C/: Notify.hsc  NotifyNotification.hsc
tests/: add-hint-test.hs  change-registered-name-test.hs  one-shot-test.hs  remove-hints-test.hs  server-info-caps-test.hs  session-test.hs  timeout-test.hs  urgency-test.hs  with-notifications-test.hs
