Name:		libnotify
Version:	0.0.1.1
License:	MIT
Author:		Emon Tsukimiya, Matvey Aksenov
Category:	System
Synopsis:	Haskell binding for Libnotify
Cabal-Version:	>= 1.6
Build-Type:	Simple

Library
  Build-Depends:	base, bytestring, glib, gtk, mtl
  Exposed-Modules:	System.Libnotify, System.Libnotify.Internal, System.Libnotify.Server, System.Libnotify.Types
  Pkgconfig-Depends:	libnotify
  Extensions:		DeriveDataTypeable, FlexibleInstances, FlexibleContexts
