name: libnotify
version: 0.0.2.1
description: Bindings to libnotify
license: MIT
license-file: LICENSE
author: Emon Tsukimiya, Matvey Aksenov
maintainer: Matvey Aksenov <matvey.aksenov@gmail.com>
category: System, Desktop
synopsis: Haskell binding for Libnotify
cabal-version: >= 1.10
build-type: Simple
extra-doc-files:
  asset/Greeting.png
extra-source-files:
  example/endless.hs

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base        >= 4 && < 5
    , bytestring
    , glib
    , gtk
    , mtl
    , semigroups
    , transformers
    , void        >= 0.5
  exposed-modules:
    Libnotify
    Libnotify.C.Notify
    Libnotify.C.NotifyNotification
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
  extra-libraries:
    notify

source-repository head
  type:     git
  location: https://github.com/supki/haskell-libnotify
